# GameBoy_DMG_Emulator

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  TECH_STACK.md
benches/: emulator_benchmark.rs
examples/: README.md
src/: lib.rs  main.rs
src/emulator/: apu.rs  cartridge.rs  cpu.rs  memory.rs  mod.rs  ppu.rs
src/graphics/: mod.rs  opengl.rs  renderer.rs  webgl.rs
src/platform/: mod.rs  native.rs  web.rs
tests/: integration_tests.rs
web/: index.html
